Zkouška - TEST - nechám na později - testy prošly v MatchControllerTest