@@ -2,10 +2,13 @@ package cz.phsoft.hokej.models.services;
 
 import cz.phsoft.hokej.data.entities.PlayerEntity;
 import cz.phsoft.hokej.data.repositories.PlayerRepository;
+import cz.phsoft.hokej.exceptions.PlayerNotFoundException;
 import cz.phsoft.hokej.models.dto.mappers.PlayerMapper;
+import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 import cz.phsoft.hokej.models.dto.PlayerDTO;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -14,7 +17,6 @@ public class PlayerServiceImpl implements PlayerService {
     private final PlayerRepository playerRepository;
     private final PlayerMapper playerMapper;
 
-
     public PlayerServiceImpl(PlayerRepository playerRepository, PlayerMapper playerMapper) {
         this.playerRepository = playerRepository;
         this.playerMapper = playerMapper;
@@ -22,26 +24,23 @@ public class PlayerServiceImpl implements PlayerService {
 
     @Override
     public List<PlayerDTO> getAllPlayers() {
-        return playerRepository.findAll()
-                .stream()
+        return playerRepository.findAll().stream()
                 .map(playerMapper::toDTO)
-                .collect(Collectors.toList());
-
+                .toList();
     }
 
     @Override
     public PlayerDTO getPlayerById(Long id) {
-            PlayerEntity player = findPlayerOrThrow(id);
-            return playerMapper.toDTO(player);
-
+        PlayerEntity player = playerRepository.findById(id)
+                .orElseThrow(() -> new PlayerNotFoundException(id)); // místo RuntimeException
+        return playerMapper.toDTO(player);
     }
 
+    // --- TRANSACTIONAL pro zápis dat ---
     @Override
+    @Transactional
     public PlayerDTO createPlayer(PlayerDTO dto) {
-        // kontrola duplicity
-        if (playerRepository.existsByNameAndSurname(dto.getName(), dto.getSurname())) {
-            throw new RuntimeException("Hráč se jménem " + dto.getName() + " " + dto.getSurname() + " již existuje.");
-        }
+        checkDuplicateNameSurname(dto.getName(), dto.getSurname(), null);
 
         PlayerEntity entity = playerMapper.toEntity(dto);
         PlayerEntity saved = playerRepository.save(entity);
@@ -49,19 +48,15 @@ public class PlayerServiceImpl implements PlayerService {
     }
 
     @Override
+    @Transactional
     public PlayerDTO updatePlayer(Long id, PlayerDTO dto) {
-
         PlayerEntity existing = findPlayerOrThrow(id);
 
         // pokud se jméno/příjmení mění, ověř duplicitu
-        if ((!existing.getName().equals(dto.getName())
-                || !existing.getSurname().equals(dto.getSurname()))
-                && playerRepository.existsByNameAndSurname(dto.getName(), dto.getSurname())) {
-
-            throw new RuntimeException("Hráč se jménem " + dto.getName() + " " + dto.getSurname() + " již existuje.");
+        if (!existing.getName().equals(dto.getName()) || !existing.getSurname().equals(dto.getSurname())) {
+            checkDuplicateNameSurname(dto.getName(), dto.getSurname(), id);
         }
 
-        // aktualizace dat
         existing.setName(dto.getName());
         existing.setSurname(dto.getSurname());
         existing.setType(dto.getType());
@@ -72,13 +67,25 @@ public class PlayerServiceImpl implements PlayerService {
     }
 
     @Override
+    @Transactional
     public void deletePlayer(Long id) {
         playerRepository.deleteById(id);
     }
 
+    // --- privátní metoda pro kontrolu duplicity jména a příjmení ---
+    private void checkDuplicateNameSurname(String name, String surname, Long ignoreId) {
+        Optional<PlayerEntity> duplicateOpt = playerRepository.findByNameAndSurname(name, surname);
+
+        if (duplicateOpt.isPresent()) {
+            if (ignoreId == null || !duplicateOpt.get().getId().equals(ignoreId)) {
+                throw new RuntimeException("Hráč se jménem " + name + " " + surname + " již existuje.");
+            }
+        }
+        }
+
+
     private PlayerEntity findPlayerOrThrow(Long playerId) {
         return playerRepository.findById(playerId)
-                .orElseThrow(() -> new RuntimeException("Player not found: " + playerId));
+                .orElseThrow(() -> new PlayerNotFoundException(playerId));
     }
-
 }
